@@ -16,10 +16,31 @@
  */
 package org.plos.namedentity.rest;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import org.eclipse.persistence.jaxb.JAXBContextProperties;
+import org.eclipse.persistence.oxm.json.JsonStructureSource;
+import org.junit.Test;
+import org.plos.namedentity.api.IndividualComposite;
+import org.plos.namedentity.api.entity.Address;
+import org.plos.namedentity.api.entity.Degree;
+import org.plos.namedentity.api.entity.Email;
+import org.plos.namedentity.api.entity.Globaltype;
+import org.plos.namedentity.api.entity.Individual;
+import org.plos.namedentity.api.entity.Phonenumber;
+import org.plos.namedentity.api.entity.Role;
+import org.plos.namedentity.api.entity.Typedescription;
+import org.plos.namedentity.api.entity.Uniqueidentifier;
 
+import javax.json.Json;
+import javax.json.JsonArray;
+import javax.json.JsonReader;
+import javax.ws.rs.client.Entity;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+import javax.xml.bind.JAXBContext;
+import javax.xml.bind.JAXBException;
+import javax.xml.bind.Marshaller;
+import javax.xml.bind.Unmarshaller;
+import javax.xml.transform.stream.StreamSource;
 import java.io.IOException;
 import java.io.StringReader;
 import java.io.StringWriter;
@@ -34,126 +55,77 @@ import java.util.List;
 import java.util.Map;
 import java.util.TimeZone;
 
-import javax.json.Json;
-import javax.json.JsonArray;
-import javax.json.JsonReader;
-import javax.ws.rs.client.Entity;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.Marshaller;
-import javax.xml.bind.Unmarshaller;
-import javax.xml.transform.stream.StreamSource;
-
-import org.eclipse.persistence.jaxb.JAXBContextProperties;
-import org.eclipse.persistence.oxm.json.JsonStructureSource;
-import org.junit.Test;
-import org.plos.namedentity.api.IndividualComposite;
-import org.plos.namedentity.api.entity.Address;
-import org.plos.namedentity.api.entity.Degree;
-import org.plos.namedentity.api.entity.Email;
-import org.plos.namedentity.api.entity.Globaltype;
-import org.plos.namedentity.api.entity.Individual;
-import org.plos.namedentity.api.entity.Organization;
-import org.plos.namedentity.api.entity.Phonenumber;
-import org.plos.namedentity.api.entity.Role;
-import org.plos.namedentity.api.entity.Typedescription;
-import org.plos.namedentity.api.entity.Uniqueidentifier;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 
 public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
 
   private static final String TEST_RESOURCE_PATH = "src/test/resources/";
 
-  private static final String TYPE_CLASS_URI  = "/typeclasses";
-  private static final String TYPE_VALUE_URI  = TYPE_CLASS_URI + "/1/typevalues";
-  private static final String INDIVIDUAL_URI  = "/individuals";
-  private static final String INDIVIDUAL_COMPOSITE_URI  = "/individuals_composite";
-  private static final String INDIV_ADDR_URI  = INDIVIDUAL_URI + "/1/addresses";
-  private static final String INDIV_EMAIL_URI = INDIVIDUAL_URI + "/1/emails";
-  private static final String INDIV_PHONE_URI = INDIVIDUAL_URI + "/1/phonenumbers";
-  private static final String INDIV_ROLE_URI  = INDIVIDUAL_URI + "/1/roles";
-  private static final String INDIV_XREF_URI  = INDIVIDUAL_URI + "/1/xref";
-  private static final String INDIV_DEGREE_URI  = INDIVIDUAL_URI + "/1/degrees";
+  private static final String TYPE_CLASS_URI = "/typeclasses";
+  private static final String TYPE_VALUE_URI = TYPE_CLASS_URI + "/1/typevalues";
+  private static final String INDIVIDUAL_URI = "/individuals";
 
-  private static final String ORGANIZATION_URI= "/organizations";
+  private static final String INDIV_ADDR_URI   = INDIVIDUAL_URI + "/1/addresses";
+  private static final String INDIV_EMAIL_URI  = INDIVIDUAL_URI + "/1/emails";
+  private static final String INDIV_PHONE_URI  = INDIVIDUAL_URI + "/1/phonenumbers";
+  private static final String INDIV_ROLE_URI   = INDIVIDUAL_URI + "/1/roles";
+  private static final String INDIV_XREF_URI   = INDIVIDUAL_URI + "/1/xref";
+  private static final String INDIV_DEGREE_URI = INDIVIDUAL_URI + "/1/degrees";
 
   @Test
-  public void testOrganizationCrud() throws Exception {
+  public void testAddToIndividualComposite() throws Exception {
 
-    // CREATE
+    String compositeIndividualJson = new String(Files.readAllBytes(
+        Paths.get(TEST_RESOURCE_PATH + "composite-individual.json")));
 
-    String organizationJson = "{\n" +
-        "   \"organizationfamiliarname\" : \"organizationfamiliarname\",\n" +
-        "   \"organizationlegalname\" : \"organizationlegalname\",\n" +
-        "   \"isactive\" : 0,\n" +
-        "   \"isvisible\" : true,\n" +
-        "   \"url\" : \"website.com\" }"; // TODO: make use of this in assertions
-
-    // Request #1. Expect success.
-
-    Response response = target(ORGANIZATION_URI).request(MediaType.APPLICATION_JSON_TYPE).post(Entity.json(organizationJson));
+    Response response = target(INDIVIDUAL_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
+        .post(Entity.json(compositeIndividualJson));
 
     assertEquals(200, response.getStatus());
 
     String jsonPayload = response.readEntity(String.class);
 
-    Unmarshaller unmarshaller = jsonUnmarshaller(Organization.class);
-    Organization entity       = unmarshalEntity(jsonPayload, Organization.class, unmarshaller);
+    Unmarshaller unmarshaller = jsonUnmarshaller(IndividualComposite.class);
+    IndividualComposite composite = unmarshalEntity(jsonPayload, IndividualComposite.class, unmarshaller);
 
-    assertEquals(Integer.valueOf(2), entity.getNedid());
-    assertEquals("familiarname", entity.getFamiliarname());
-    assertEquals("legalname", entity.getLegalname());
-    assertEquals(new Byte((byte)0), entity.getIsactive());
-    assertEquals(new Byte((byte)1), entity.getIsvisible());
+    Individual individual = composite.getIndividuals().get(0);
+    assertEquals(Integer.valueOf(1), individual.getNedid());
+    assertEquals("firstname", individual.getFirstname());
 
-    // GET
-
-    response = target(ORGANIZATION_URI + "/2").request(MediaType.APPLICATION_JSON_TYPE).get();
-
-    assertEquals(200, response.getStatus());
-
-    jsonPayload = response.readEntity(String.class);
-
-    entity = unmarshalEntity(jsonPayload, Organization.class, unmarshaller);
-    assertEquals(Integer.valueOf(2), entity.getNedid());
-    assertEquals("familiarname", entity.getFamiliarname());
-    assertEquals("legalname", entity.getLegalname());
-    assertEquals(new Byte((byte)0), entity.getIsactive());
-    assertEquals(new Byte((byte)1), entity.getIsvisible());
-    
-    // TODO: LIST, DELETE, UPDATE
   }
 
   @Test
   public void testCreateIndividualComposite() throws Exception {
 
     String compositeIndividualJson = new String(Files.readAllBytes(
-                                      Paths.get(TEST_RESOURCE_PATH + "composite-individual.json")));
-  
+        Paths.get(TEST_RESOURCE_PATH + "composite-individual.json")));
+
     // Request #1. Expect success.
 
-    Response response = target(INDIVIDUAL_COMPOSITE_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                          .post(Entity.json(compositeIndividualJson));
+    Response response = target(INDIVIDUAL_URI).request(MediaType.APPLICATION_JSON_TYPE)
+        .post(Entity.json(compositeIndividualJson));
 
     assertEquals(200, response.getStatus());
 
     String jsonPayload = response.readEntity(String.class);
 
-    Unmarshaller unmarshaller     = jsonUnmarshaller(IndividualComposite.class);
+    Unmarshaller unmarshaller = jsonUnmarshaller(IndividualComposite.class);
     IndividualComposite composite = unmarshalEntity(jsonPayload, IndividualComposite.class, unmarshaller);
 
-    assertEquals(Integer.valueOf(1), composite.getNamedentityid());
-    assertEquals("firstname", composite.getFirstname());
-    assertEquals("middlename", composite.getMiddlename());
-    assertEquals("lastname", composite.getLastname());
-    assertEquals("Ms.", composite.getNameprefix());
+    Individual individual = composite.getIndividuals().get(0);
+    assertEquals(Integer.valueOf(1), individual.getNedid());
+    assertEquals("firstname", individual.getFirstname());
+    assertEquals("middlename", individual.getMiddlename());
+    assertEquals("lastname", individual.getLastname());
+    assertEquals("Ms.", individual.getNameprefix());
     assertEquals("email@internet.com", composite.getEmails().get(0).getEmailaddress());
 
     // Request #2. Expect a validation exception (client-side error)
 
-    response = target(INDIVIDUAL_COMPOSITE_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(compositeIndividualJson));
+    response = target(INDIVIDUAL_URI).request(MediaType.APPLICATION_JSON_TYPE)
+        .post(Entity.json(compositeIndividualJson));
 
     assertEquals(400, response.getStatus());
 
@@ -162,8 +134,8 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
 
     // Request #3. Expect a data access exception (server-side error)
 
-    response = target(INDIVIDUAL_COMPOSITE_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(compositeIndividualJson));
+    response = target(INDIVIDUAL_URI).request(MediaType.APPLICATION_JSON_TYPE)
+        .post(Entity.json(compositeIndividualJson));
 
     assertEquals(500, response.getStatus());
 
@@ -172,55 +144,78 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
   }
 
   @Test
-  public void testReadIndividualComposite() throws Exception {
+  public void testReadIndividualCompositeByNedId() throws Exception {
 
-    Response response = target(INDIVIDUAL_COMPOSITE_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE).get();
+    Response response = target(INDIVIDUAL_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE).get();
     assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
 
     String jsonPayload = response.readEntity(String.class);
 
-    Unmarshaller unmarshaller     = jsonUnmarshaller(IndividualComposite.class);
+    Unmarshaller unmarshaller = jsonUnmarshaller(IndividualComposite.class);
     IndividualComposite composite = unmarshalEntity(jsonPayload, IndividualComposite.class, unmarshaller);
 
-    assertEquals(Integer.valueOf(1), composite.getNamedentityid());
-    assertEquals("firstname", composite.getFirstname());
-    assertEquals("middlename", composite.getMiddlename());
-    assertEquals("lastname", composite.getLastname());
-    assertEquals("Ms.", composite.getNameprefix());
+    Individual individual = composite.getIndividuals().get(0);
+    assertEquals(Integer.valueOf(1), individual.getNedid());
+    assertEquals("firstname", individual.getFirstname());
+    assertEquals("middlename", individual.getMiddlename());
+    assertEquals("lastname", individual.getLastname());
+    assertEquals("Ms.", individual.getNameprefix());
     assertEquals("email@internet.com", composite.getEmails().get(0).getEmailaddress());
   }
 
   @Test
-  public void testIndividualFinders() throws IOException, JAXBException {
+  public void testReadIndividualCompositeByUid() throws Exception {
 
-    /* ------------------------------------------------------------------ */
-    /*  FIND (BY ID)                                                      */
-    /* ------------------------------------------------------------------ */
-
-    Response response = target(INDIVIDUAL_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE).get();
-
-    assertEquals(200, response.getStatus());
+    Response response = target(INDIVIDUAL_URI + "/Editorial Manager/1").request(MediaType.APPLICATION_JSON_TYPE).get();
+    assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
 
     String jsonPayload = response.readEntity(String.class);
 
-    Unmarshaller unmarshaller = jsonUnmarshaller(Individual.class);
-    Individual entity         = unmarshalEntity(jsonPayload, Individual.class, unmarshaller);
+    Unmarshaller unmarshaller = jsonUnmarshaller(IndividualComposite.class);
+    IndividualComposite composite = unmarshalEntity(jsonPayload, IndividualComposite.class, unmarshaller);
 
-    assertEquals(Integer.valueOf(1), entity.getNedid());
-    assertEquals("firstname", entity.getFirstname());
-    assertEquals("middlename", entity.getMiddlename());
-    assertEquals("lastname", entity.getLastname());
-    assertEquals("Mr.", entity.getNameprefix());
+    Individual individual = composite.getIndividuals().get(0);
+    assertEquals(Integer.valueOf(1), individual.getNedid());
+    assertEquals("firstname", individual.getFirstname());
+    assertEquals("middlename", individual.getMiddlename());
+    assertEquals("lastname", individual.getLastname());
+    assertEquals("Ms.", individual.getNameprefix());
+    assertEquals("email@internet.com", composite.getEmails().get(0).getEmailaddress());
+  }
 
-    /* ------------------------------------------------------------------ */
-    /*  FIND (ALL)                                                        */
-    /* ------------------------------------------------------------------ */
+  @Test
+  public void testIndividualUpdate() throws Exception {
 
-    response = target(INDIVIDUAL_URI).request(MediaType.APPLICATION_JSON_TYPE).get();
+    final String NEW_FIRSTNAME = "origfirstname";
+    final String NEW_LASTNAME = "origlastname";
+
+    final String NEW_INDIVIDUALS_JSON_PAYLOAD = "{"
+        + "\"firstname\":\"" + NEW_FIRSTNAME + "\","
+        + "\"lastname\":\"" + NEW_LASTNAME + "\""
+        + "}";
+
+    Response response = target(INDIVIDUAL_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
+        .post(Entity.json(NEW_INDIVIDUALS_JSON_PAYLOAD));
+
+    assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
+
+  }
+
+  @Test
+  public void testIndividualDelete() {
+    assertEquals(Response.Status.NO_CONTENT.getStatusCode(),
+        target(INDIVIDUAL_URI + "/1/1").request().delete().getStatus());
+  }
+
+  @Test
+  public void testIndividualsListing() throws Exception {
+
+    Response response = target(INDIVIDUAL_URI).request(MediaType.APPLICATION_JSON_TYPE).get();
 
     assertEquals(200, response.getStatus());
-    jsonPayload = response.readEntity(String.class);
+    String jsonPayload = response.readEntity(String.class);
 
+    Unmarshaller unmarshaller = jsonUnmarshaller(Individual.class);
     List<Individual> individuals = unmarshalEntities(jsonPayload, Individual.class, unmarshaller);
     assertEquals(3, individuals.size());
   }
@@ -233,9 +228,9 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     /* ------------------------------------------------------------------ */
 
     String requestJson = new String(Files.readAllBytes(Paths.get(TEST_RESOURCE_PATH + "address.json")));
-  
+
     Response response = target(INDIV_ADDR_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                          .post(Entity.json(requestJson));
+        .post(Entity.json(requestJson));
 
     assertEquals(200, response.getStatus());
 
@@ -255,15 +250,14 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     assertEquals("CA", entity.getStatecodetype());
     assertEquals("United States", entity.getCountrycodetype());
     assertEquals("12345", entity.getPostalcode());
-    assertEquals(Byte.valueOf((byte)1), entity.getIsprimary());
-    assertEquals(Byte.valueOf((byte)1), entity.getIsactive());
+    assertEquals(true, entity.getIsactive());
 
     /* ------------------------------------------------------------------ */
     /*  UPDATE                                                            */
     /* ------------------------------------------------------------------ */
 
     response = target(INDIV_ADDR_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(writeValueAsString(entity)));
+        .post(Entity.json(writeValueAsString(entity)));
 
     assertEquals(200, response.getStatus());
 
@@ -284,7 +278,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     responseJson = response.readEntity(String.class);
 
     Address address = unmarshalEntity(responseJson, Address.class, unmarshaller);
-    assertNotNull( address );
+    assertNotNull(address);
 
     /* ------------------------------------------------------------------ */
     /*  FIND (BY NED ID)                                                  */
@@ -315,27 +309,27 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
   @Test
   public void testRoleCrud() throws IOException, JAXBException {
 
-    Date START_DATE = gmtDate(2014,6,30);  // Jun 30, 2014 00:00:00 GMT
+    Date START_DATE = gmtDate(2014, 6, 30);  // Jun 30, 2014 00:00:00 GMT
 
     /* ------------------------------------------------------------------ */
     /*  CREATE                                                            */
     /* ------------------------------------------------------------------ */
 
     String requestJson = new String(Files.readAllBytes(Paths.get(TEST_RESOURCE_PATH + "role.json")));
-  
+
     Response response = target(INDIV_ROLE_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                          .post(Entity.json(requestJson));
+        .post(Entity.json(requestJson));
 
     assertEquals(200, response.getStatus());
 
     String responseJson = response.readEntity(String.class);
 
     Unmarshaller unmarshaller = jsonUnmarshaller(Role.class);
-    Role entity               = unmarshalEntity(responseJson, Role.class, unmarshaller);
+    Role entity = unmarshalEntity(responseJson, Role.class, unmarshaller);
 
     assertEquals(Integer.valueOf(1), entity.getId());
     assertEquals(Integer.valueOf(1), entity.getNedid());
-    assertEquals("Editorial Manager", entity.getSourceapplicationtype());
+    assertEquals("Editorial Manager", entity.getApplicationtype());
     assertEquals("Academic Editor (PLOS ONE)", entity.getType());
 
     assertEquals(START_DATE, entity.getStartdate());
@@ -345,7 +339,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     /* ------------------------------------------------------------------ */
 
     response = target(INDIV_ROLE_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(writeValueAsString(entity)));
+        .post(Entity.json(writeValueAsString(entity)));
 
     assertEquals(200, response.getStatus());
 
@@ -366,7 +360,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     responseJson = response.readEntity(String.class);
 
     Role role = unmarshalEntity(responseJson, Role.class, unmarshaller);
-    assertNotNull( role );
+    assertNotNull(role);
 
     /* ------------------------------------------------------------------ */
     /*  FIND (BY NED ID)                                                  */
@@ -384,7 +378,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     role = roles.get(0);
     assertEquals(Integer.valueOf(1), role.getId());
     assertEquals(Integer.valueOf(1), role.getNedid());
-    assertEquals("Editorial Manager", role.getSourceapplicationtype());
+    assertEquals("Editorial Manager", role.getApplicationtype());
     assertEquals("Academic Editor (PLOS ONE)", role.getType());
     assertEquals(START_DATE, role.getStartdate());
   }
@@ -397,30 +391,29 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     /* ------------------------------------------------------------------ */
 
     String emailsJson = new String(Files.readAllBytes(Paths.get(TEST_RESOURCE_PATH + "emails.json")));
-  
+
     Response response = target(INDIV_EMAIL_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                          .post(Entity.json(emailsJson));
+        .post(Entity.json(emailsJson));
 
     assertEquals(200, response.getStatus());
 
     String jsonPayload = response.readEntity(String.class);
 
     Unmarshaller unmarshaller = jsonUnmarshaller(Email.class);
-    Email entity              = unmarshalEntity(jsonPayload, Email.class, unmarshaller);
+    Email entity = unmarshalEntity(jsonPayload, Email.class, unmarshaller);
 
     assertEquals(Integer.valueOf(1), entity.getId());
     assertEquals(Integer.valueOf(1), entity.getNedid());
     assertEquals("Work", entity.getType());
     assertEquals("foo.bar.personal@gmail.com", entity.getEmailaddress());
-    assertEquals(Byte.valueOf((byte)1), entity.getIsprimary());
-    assertEquals(Byte.valueOf((byte)1), entity.getIsactive());
+    assertEquals(true, entity.getIsactive());
 
     /* ------------------------------------------------------------------ */
     /*  UPDATE                                                            */
     /* ------------------------------------------------------------------ */
 
     response = target(INDIV_EMAIL_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
-                  .post(Entity.json(writeValueAsString(entity)));
+        .post(Entity.json(writeValueAsString(entity)));
 
     assertEquals(200, response.getStatus());
 
@@ -441,7 +434,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     jsonPayload = response.readEntity(String.class);
 
     Email email = unmarshalEntity(jsonPayload, Email.class, unmarshaller);
-    assertNotNull( email );
+    assertNotNull(email);
 
     /* ------------------------------------------------------------------ */
     /*  FIND (BY NED ID)                                                  */
@@ -459,45 +452,30 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     Email workEmail = emails.get(0);
     assertEquals("Work", workEmail.getType());
     assertEquals("fu.manchu.work@foo.com", workEmail.getEmailaddress());
-    assertTrue(workEmail.getIsprimary() == 1);
 
     /* ------------------------------------------------------------------ */
     /*  404 ERRORS                                                        */
     /* ------------------------------------------------------------------ */
 
     assertEquals(Response.Status.OK.getStatusCode(),
-        target("/individuals/1")
-            .request(MediaType.APPLICATION_JSON_TYPE).get().getStatus());
-
-    assertEquals(Response.Status.NOT_FOUND.getStatusCode(),
-        target("/individuals/2")
-            .request(MediaType.APPLICATION_JSON_TYPE).get().getStatus());
-
-    // INDIVIDUAL NOT
-
-    assertEquals(Response.Status.OK.getStatusCode(),
         target("/individuals/1/emails")
-        .request(MediaType.APPLICATION_JSON_TYPE).get().getStatus());
-
-//    assertEquals(Response.Status.OK.getStatusCode(),
-//        target("/organizations/2/emails")
-//            .request(MediaType.APPLICATION_JSON_TYPE).get().getStatus());
+            .request(MediaType.APPLICATION_JSON_TYPE).get().getStatus());
 
     assertEquals(Response.Status.NOT_FOUND.getStatusCode(),
         target("/individuals/2/emails")
-        .request(MediaType.APPLICATION_JSON_TYPE).get().getStatus());
+            .request(MediaType.APPLICATION_JSON_TYPE).get().getStatus());
 
     // EMAIL CROSSING ENTITIES
 
     assertEquals(Response.Status.OK.getStatusCode(),
         target("/individuals/1/emails/1")
-        .request(MediaType.APPLICATION_JSON_TYPE).get().getStatus());
+            .request(MediaType.APPLICATION_JSON_TYPE).get().getStatus());
 
 //    assertEquals(Response.Status.OK.getStatusCode(), target("/organizations/2/emails/5").request(MediaType.APPLICATION_JSON_TYPE).get().getStatus()); // TODO: add this once /organizations email CRUD is done
 
     assertEquals(Response.Status.NOT_FOUND.getStatusCode(),
         target("/individuals/1/emails/5")
-        .request(MediaType.APPLICATION_JSON_TYPE).get().getStatus());
+            .request(MediaType.APPLICATION_JSON_TYPE).get().getStatus());
   }
 
   @Test
@@ -514,7 +492,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     String jsonPayload = response.readEntity(String.class);
 
     Unmarshaller unmarshaller = jsonUnmarshaller(Degree.class);
-    List<Degree> degrees      = unmarshalEntities(jsonPayload, Degree.class, unmarshaller);
+    List<Degree> degrees = unmarshalEntities(jsonPayload, Degree.class, unmarshaller);
     assertEquals(1, degrees.size());
 
     Degree degree = degrees.get(0);
@@ -536,7 +514,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
 
     String jsonPayload = response.readEntity(String.class);
 
-    Unmarshaller unmarshaller      = jsonUnmarshaller(Phonenumber.class);
+    Unmarshaller unmarshaller = jsonUnmarshaller(Phonenumber.class);
     List<Phonenumber> phonenumbers = unmarshalEntities(jsonPayload, Phonenumber.class, unmarshaller);
     assertEquals(3, phonenumbers.size());
 
@@ -560,8 +538,8 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
 
     String jsonPayload = response.readEntity(String.class);
 
-    List<Uniqueidentifier> xrefs = unmarshalEntities(jsonPayload, Uniqueidentifier.class, 
-                                      jsonUnmarshaller(Uniqueidentifier.class));
+    List<Uniqueidentifier> xrefs = unmarshalEntities(jsonPayload, Uniqueidentifier.class,
+        jsonUnmarshaller(Uniqueidentifier.class));
     assertEquals(2, xrefs.size());
 
     for (Uniqueidentifier xref : xrefs) {
@@ -572,17 +550,14 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     /*  FIND INDIVIDUALS BY EXTERNAL REFERENCE                            */
     /* ------------------------------------------------------------------ */
 
-    response = target(INDIVIDUAL_URI)
-                .queryParam("uidType", "ORCID")
-                .queryParam("uidValue", "0000-0002-9430-3191")
-                .request(MediaType.APPLICATION_JSON_TYPE).get();
+    response = target(INDIVIDUAL_URI + "/ORCID/0000-0002-9430-3191")
+        .request(MediaType.APPLICATION_JSON_TYPE).get();
 
     assertEquals(200, response.getStatus());
     jsonPayload = response.readEntity(String.class);
 
-    List<Individual> individuals = unmarshalEntities(jsonPayload, Individual.class, 
-                                      jsonUnmarshaller(Individual.class));
-    assertEquals(3, individuals.size());
+    IndividualComposite individualComposite = unmarshalEntity(jsonPayload, IndividualComposite.class, jsonUnmarshaller(IndividualComposite.class));
+    assertNotNull(individualComposite);
   }
 
   @Test
@@ -592,24 +567,24 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     /*  CREATE                                                            */
     /* ------------------------------------------------------------------ */
 
-    final String NEW_TYPE_DESC  = "New Type Description";
+    final String NEW_TYPE_DESC = "New Type Description";
     final String NEW_TYPE_USAGE = "New Type Usage";
 
     final String NEW_TYPE_JSON_PAYLOAD = "{"
-            + "\"description\":\"" + NEW_TYPE_DESC  + "\","
-            + "\"howused\":\""     + NEW_TYPE_USAGE + "\""
-            + "}";
+        + "\"description\":\"" + NEW_TYPE_DESC + "\","
+        + "\"howused\":\"" + NEW_TYPE_USAGE + "\""
+        + "}";
 
     // Request #1. Expect success.
 
     Response response = target(TYPE_CLASS_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                          .post(Entity.json(NEW_TYPE_JSON_PAYLOAD));
+        .post(Entity.json(NEW_TYPE_JSON_PAYLOAD));
 
     assertEquals(200, response.getStatus());
 
     String jsonPayload = response.readEntity(String.class);
 
-    Unmarshaller unmarshaller    = jsonUnmarshaller(Typedescription.class);
+    Unmarshaller unmarshaller = jsonUnmarshaller(Typedescription.class);
     Typedescription newTypeClass = unmarshalEntity(jsonPayload, Typedescription.class, unmarshaller);
 
     assertEquals(Integer.valueOf(1), newTypeClass.getId());
@@ -619,7 +594,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     // Request #2. Expect a validation exception (client-side error)
 
     response = target(TYPE_CLASS_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(NEW_TYPE_JSON_PAYLOAD));
+        .post(Entity.json(NEW_TYPE_JSON_PAYLOAD));
 
     assertEquals(400, response.getStatus());
 
@@ -629,7 +604,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     // Request #3. Expect a data access exception (server-side error)
 
     response = target(TYPE_CLASS_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(NEW_TYPE_JSON_PAYLOAD));
+        .post(Entity.json(NEW_TYPE_JSON_PAYLOAD));
 
     assertEquals(500, response.getStatus());
 
@@ -670,7 +645,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     /*  UPDATE                                                            */
     /* ------------------------------------------------------------------ */
 
-    final String UPDATE_TYPE_DESC  = "Update Type Description";
+    final String UPDATE_TYPE_DESC = "Update Type Description";
     final String UPDATE_TYPE_USAGE = "Update Type Usage";
 
     Typedescription updatedTypeClass = foundTypeClass;
@@ -682,7 +657,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     String jsonUpdatedTypeClass = writeValueAsString(updatedTypeClass);
 
     response = target(TYPE_CLASS_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(jsonUpdatedTypeClass));
+        .post(Entity.json(jsonUpdatedTypeClass));
 
     assertEquals(200, response.getStatus());
 
@@ -694,14 +669,14 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     // UPDATE #2 should raise a validation exception
 
     response = target(TYPE_CLASS_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(jsonUpdatedTypeClass));
+        .post(Entity.json(jsonUpdatedTypeClass));
 
     assertEquals(400, response.getStatus());
-    
+
     // UPDATE #3 should raise a server-side exception
 
     response = target(TYPE_CLASS_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(jsonUpdatedTypeClass));
+        .post(Entity.json(jsonUpdatedTypeClass));
 
     assertEquals(500, response.getStatus());
 
@@ -717,86 +692,33 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
   }
 
   @Test
-  public void testIndividualsCrud() throws Exception, JAXBException {
-
-    // CREATE, #1 expect success
-
-    final String NEW_FIRSTNAME = "origfirstname";
-    final String NEW_LASTNAME = "origlastname";
-
-    final String NEW_INDIVIDUALS_JSON_PAYLOAD = "{"
-        + "\"firstname\":\"" + NEW_FIRSTNAME + "\","
-        + "\"lastname\":\""  + NEW_LASTNAME  + "\""
-        + "}";
-
-    Response response = target(INDIVIDUAL_URI).request(MediaType.APPLICATION_JSON_TYPE)
-        .post(Entity.json(NEW_INDIVIDUALS_JSON_PAYLOAD));
-
-    assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
-
-    String jsonPayload = response.readEntity(String.class);
-
-    Unmarshaller unmarshaller = jsonUnmarshaller(Individual.class);
-    Individual entity         = unmarshalEntity(jsonPayload, Individual.class, unmarshaller);
-
-    assertEquals(Integer.valueOf(1), entity.getNedid());
-    assertEquals("firstname", entity.getFirstname());
-    assertEquals("lastname", entity.getLastname());
-
-    // READ
-
-    response = target(INDIVIDUAL_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE).get();
-    assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
-
-    jsonPayload = response.readEntity(String.class);
-
-    entity = unmarshalEntity(jsonPayload, Individual.class, unmarshaller);
-
-    assertEquals(Integer.valueOf(1), entity.getNedid());
-    assertEquals("firstname", entity.getFirstname());
-    assertEquals("lastname", entity.getLastname());
-
-    // UPDATE
-
-    response = target(INDIVIDUAL_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
-        .post(Entity.json(NEW_INDIVIDUALS_JSON_PAYLOAD));
-
-    assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
-
-    // DELETE
-
-    response = target(INDIVIDUAL_URI + "/1").request().delete();
-    assertEquals(Response.Status.NO_CONTENT.getStatusCode(), response.getStatus());
-  }
-
-  @Test
   public void testGlobalTypesCrud() throws IOException, JAXBException {
 
     /* ------------------------------------------------------------------ */
     /*  CREATE                                                            */
     /* ------------------------------------------------------------------ */
 
-    final String NEW_TYPEVAL_SHORTDESC  = "New Type Val Short Description";
-    final String NEW_TYPEVAL_LONGDESC   = "New Type Val Long Description";
-    final String NEW_TYPEVAL_TYPECODE   = "XYZ";
+    final String NEW_TYPEVAL_SHORTDESC = "New Type Val Short Description";
+    final String NEW_TYPEVAL_LONGDESC = "New Type Val Long Description";
+    final String NEW_TYPEVAL_TYPECODE = "XYZ";
 
     final String NEW_TYPEVAL_JSON_PAYLOAD = "{"
-            + "\"shortdescription\":\"" + NEW_TYPEVAL_SHORTDESC + "\","
-            + "\"longdescription\":\""  + NEW_TYPEVAL_LONGDESC  + "\","
-            + "\"typecode\":\""         + NEW_TYPEVAL_TYPECODE  + "\""
-            + "}";
+        + "\"shortdescription\":\"" + NEW_TYPEVAL_SHORTDESC + "\","
+        + "\"longdescription\":\"" + NEW_TYPEVAL_LONGDESC + "\","
+        + "\"typecode\":\"" + NEW_TYPEVAL_TYPECODE + "\""
+        + "}";
 
     // Request #1. Expect success.
 
     Response response = target(TYPE_VALUE_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                          .post(Entity.json(NEW_TYPEVAL_JSON_PAYLOAD));
+        .post(Entity.json(NEW_TYPEVAL_JSON_PAYLOAD));
 
     assertEquals(200, response.getStatus());
 
     String jsonPayload = response.readEntity(String.class);
 
     Unmarshaller unmarshaller = jsonUnmarshaller(Globaltype.class);
-    Globaltype newTypeVal     = unmarshalEntity(jsonPayload, Globaltype.class, unmarshaller);
+    Globaltype newTypeVal = unmarshalEntity(jsonPayload, Globaltype.class, unmarshaller);
 
     assertEquals(Integer.valueOf(1), newTypeVal.getId());
     assertEquals("Type Value #1 Short Description", newTypeVal.getShortdescription());
@@ -805,7 +727,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     // Request #2. Expect a validation exception (client-side error)
 
     response = target(TYPE_VALUE_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(NEW_TYPEVAL_JSON_PAYLOAD));
+        .post(Entity.json(NEW_TYPEVAL_JSON_PAYLOAD));
 
     assertEquals(400, response.getStatus());
 
@@ -815,7 +737,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     // Request #3. Expect a data access exception (server-side error)
 
     response = target(TYPE_VALUE_URI).request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(NEW_TYPEVAL_JSON_PAYLOAD));
+        .post(Entity.json(NEW_TYPEVAL_JSON_PAYLOAD));
 
     assertEquals(500, response.getStatus());
 
@@ -851,7 +773,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     List<Globaltype> typevaluesfortypeclass = unmarshalEntities(jsonPayload, Globaltype.class, unmarshaller);
     assertEquals(5, typevaluesfortypeclass.size());
     for (int i = 0; i < 5; i++) {
-      assertEquals(Integer.valueOf(i+1), typevaluesfortypeclass.get(i).getId());
+      assertEquals(Integer.valueOf(i + 1), typevaluesfortypeclass.get(i).getId());
     }
 
     /* ------------------------------------------------------------------ */
@@ -866,7 +788,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     String jsonUpdatedTypeVal = writeValueAsString(updatedTypeVal);
 
     response = target(TYPE_VALUE_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(jsonUpdatedTypeVal));
+        .post(Entity.json(jsonUpdatedTypeVal));
 
     assertEquals(200, response.getStatus());
 
@@ -878,14 +800,14 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
     // UPDATE #2 should raise a validation exception
 
     response = target(TYPE_VALUE_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(jsonUpdatedTypeVal));
+        .post(Entity.json(jsonUpdatedTypeVal));
 
     assertEquals(400, response.getStatus());
-    
+
     // UPDATE #3 should raise a server-side exception
 
     response = target(TYPE_VALUE_URI + "/1").request(MediaType.APPLICATION_JSON_TYPE)
-                .post(Entity.json(jsonUpdatedTypeVal));
+        .post(Entity.json(jsonUpdatedTypeVal));
 
     assertEquals(500, response.getStatus());
 
@@ -901,32 +823,32 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
   }
 
   private <T> JAXBContext jsonJaxbContext(Class<T> clazz) throws JAXBException {
-    Map<String,Object> properties = new HashMap<String,Object>(2);
+    Map<String, Object> properties = new HashMap<String, Object>(2);
     properties.put(JAXBContextProperties.MEDIA_TYPE, "application/json");
-    properties.put(JAXBContextProperties.JSON_INCLUDE_ROOT, false); 
-    return JAXBContext.newInstance(new Class[] {clazz}, properties);
+    properties.put(JAXBContextProperties.JSON_INCLUDE_ROOT, false);
+    return JAXBContext.newInstance(new Class[]{clazz}, properties);
   }
 
   private <T> Unmarshaller jsonUnmarshaller(Class<T> clazz) throws JAXBException {
-    JAXBContext jc = jsonJaxbContext(clazz); 
+    JAXBContext jc = jsonJaxbContext(clazz);
     return jc.createUnmarshaller();
   }
 
   private <T> Marshaller jsonMarshaller(Class<T> clazz) throws JAXBException {
-    JAXBContext jc = jsonJaxbContext(clazz); 
+    JAXBContext jc = jsonJaxbContext(clazz);
     return jc.createMarshaller();
   }
 
-  private <T> T unmarshalEntity(String json, Class<T> clazz, Unmarshaller unmarshaller) 
-    throws JAXBException {
+  private <T> T unmarshalEntity(String json, Class<T> clazz, Unmarshaller unmarshaller)
+      throws JAXBException {
     return unmarshaller.unmarshal(new StreamSource(new StringReader(json)), clazz).getValue();
   }
 
   @SuppressWarnings("unchecked")
-  private <T> List<T> unmarshalEntities(String json, Class<T> clazz, Unmarshaller unmarshaller) 
-    throws JAXBException {
+  private <T> List<T> unmarshalEntities(String json, Class<T> clazz, Unmarshaller unmarshaller)
+      throws JAXBException {
     JsonReader jsonReader = Json.createReader(new StringReader(json));
-    JsonArray jsonArray   = jsonReader.readArray();
+    JsonArray jsonArray = jsonReader.readArray();
     JsonStructureSource arraySource = new JsonStructureSource(jsonArray);
     return (List<T>) unmarshaller.unmarshal(arraySource, clazz).getValue();
   }
@@ -941,7 +863,7 @@ public class NamedEntityResourceTest extends SpringContextAwareJerseyTest {
   private Date gmtDate(int year, int month, int day) {
     Calendar cal = new GregorianCalendar(TimeZone.getTimeZone("GMT"));
     // calendar month is 0-based, so subtract one
-    cal.set(year, (month-1), day, 0, 0, 0);
+    cal.set(year, (month - 1), day, 0, 0, 0);
     cal.set(Calendar.MILLISECOND, 0);
     return cal.getTime();
   }
